--- a/Les objets et les systèmes techniques : leurs usages et leurs interactions à découvrir et à analyser/Séquence_C15_C16_3ᵉ-Numérique_Société_Économie_Environnement_et_Santé.html
+++ b/Les objets et les systèmes techniques : leurs usages et leurs interactions à découvrir et à analyser/Séquence_C15_C16_3ᵉ-Numérique_Société_Économie_Environnement_et_Santé.html
@@ -339,6 +339,17 @@ a:hover, a:focus { color: #cfe6ff; text-decoration: underline; }
   <h3>3.a – Questions à partir du document</h3>
   <p class="consigne"><strong>Consigne :</strong> Répondez aux questions ci-dessous en vous appuyant sur le PDF. Justifiez en une à deux phrases.</p>
 
+<h4>3.b – Imprimer de manière raisonnée</h3>
+<p>Avant d’imprimer, réfléchis à l’impact écologique...</p>
+
+<!-- Lien vers le PDF Delagrave -->
+<p>
+  <a href="delagrave_affiche_l_ecologie_du_numerique_college.pdf" target="_blank">
+    📄 Affiche Delagrave : L'écologie du numérique (PDF)
+  </a>
+</p>
+
+    
   <!-- Q1 -->
   <p>1) Qu’appelle-t-on <strong>écologie du numérique</strong> ?</p>
   <textarea placeholder="Votre réponse…"></textarea>
@@ -1166,3 +1177,4 @@ for u in urls:
 
 </body>
 </html>
+
