--- a/Les objets et les systèmes techniques : leurs usages et leurs interactions à découvrir et à analyser/Séquence_C15_C16_3ᵉ-Numérique_Société_Économie_Environnement_et_Santé.html
+++ b/Les objets et les systèmes techniques : leurs usages et leurs interactions à découvrir et à analyser/Séquence_C15_C16_3ᵉ-Numérique_Société_Économie_Environnement_et_Santé.html
@@ -331,9 +331,10 @@ a:hover, a:focus { color: #cfe6ff; text-decoration: underline; }
   <!-- Intégration de la ressource PDF (placer DELAGR~1.PDF à côté du fichier HTML) -->
   <div class="callout">
     <p><strong>Ressource :</strong> <em>L’écologie du numérique</em> (Delagrave / Geek Junior).</p>
-    <embed src="DELAGR~1.PDF#view=FitH" type="application/pdf" width="100%" height="420px"
-           style="border:1px solid var(--border); border-radius:6px;"
-           onerror="this.outerHTML='<p>📄 <a href=&quot;DELAGR~1.PDF&quot; target=&quot;_blank&quot; rel=&quot;noopener&quot;>Ouvrir le PDF dans un nouvel onglet</a></p>';">
+    <embed src="delagrave_affiche_l_ecologie_du_numerique_college.pdf#view=FitH" 
+       type="application/pdf" width="100%" height="420px"
+       style="border:1px solid var(--border); border-radius:6px;"
+       onerror="this.outerHTML='<p>📄 <a href=&quot;delagrave_affiche_l_ecologie_du_numerique_college.pdf&quot; target=&quot;_blank&quot; rel=&quot;noopener&quot;>Ouvrir le PDF dans un nouvel onglet</a></p>'">
   </div>
 
   <h3>3.a – Questions à partir du document</h3>
@@ -1177,4 +1178,5 @@ for u in urls:
 
 </body>
 </html>
+
 
